cluster/core/argocd/argo-cd/resources/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-http
  namespace: argocd
spec:
  hostnames:
    - argocd.btkostner.network
  parentRefs:
    - name: external-gateway
      namespace: networking
  rules:
    - filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: X-Forwarded-Proto
                value: https
      backendRefs:
        - name: argocd-server
          port: 443
