cluster/core/argocd/argo-cd/resources/tls-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: argocd-tls
  namespace: argocd
spec:
  hostnames:
    - argocd.btkostner.network
  parentRefs:
    - name: external-gateway
      namespace: networking
  rules:
    - backendRefs:
        - name: argocd-server
          port: 443
